# sales-automation-bot

./: .gitignore  README.md  analytics.py  config.py  data_loader.py  data_processor.py  fetch_data.py  fetch_data_test.ipynb  main.py  pyproject.toml  streamlit_app.py  telegram_bot.py  web_view.py
.devcontainer/: devcontainer.json
data/: orders_demo.csv
docs/: README.md
src/core/: analytics.py  data_loader.py
src/interfaces/: cli.py  telegram_bot.py  web_app.py
