[project]
name = "sales-automation-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gspread>=6.2.1",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "notebook>=7.4.5",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
]
