[project]
name = "sales-automation-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gspread>=6.2.1",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "kaleido>=1.1.0",
    "matplotlib>=3.10.6",
    "notebook>=7.4.5",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "python-dotenv>=1.1.1",
    "python-telegram-bot>=22.3",
    "seaborn>=0.13.2",
    "streamlit>=1.49.1",
    "tabulate>=0.9.0",
]
